Shift all ci jobs to self-hosted runner

--- a/.github/workflows/transport.yaml
+++ b/.github/workflows/transport.yaml
@@ -195,7 +195,7 @@ jobs:
       continue-on-error: true
 
   merge:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: report
 
     steps:
