Update share weight convergence in r12/config.yaml
change the settings as discussed with bas here (https://iiasa-ece.slack.com/archives/ccfhdna6p/p1715895755695039?thread_ts=1714748468.297239&cid=ccfhdna6p)

--- a/message_ix_models/data/transport/R12/config.yaml
+++ b/message_ix_models/data/transport/R12/config.yaml
@@ -72,13 +72,13 @@ share weight convergence:
   R12_CHN: [R12_PAO, R12_WEU]
   R12_RCPA: [R12_PAO, R12_WEU]
   R12_EEU: [R12_PAO, R12_WEU]
-  R12_FSU: [R12_NAM]
-  R12_LAM: [R12_PAO, R12_WEU]
+  R12_FSU: [R12_NAM, R12_WEU]
+  R12_LAM: [R12_NAM, R12_WEU]
   R12_MEA: [R12_NAM, R12_WEU]
-  R12_NAM: []
+  R12_NAM: [R12_NAM]
   R12_PAO: [R12_PAO, R12_WEU]
   R12_PAS: [R12_PAO, R12_WEU]
-  R12_SAS: [R12_PAO, R12_WEU]
+  R12_SAS: [R12_PAO, R12_NAM]
   R12_WEU: [R12_PAO, R12_WEU]
   # No convergence for any region:
   # R12_AFR: []
