Update base year steel and cement demands

--- a/message_ix_models/data/material/steel/demand_steel.yaml
+++ b/message_ix_models/data/material/steel/demand_steel.yaml
@@ -1,36 +1,36 @@
 - R12_AFR:
+    value: 13.18061447271739
     year: 2020
-    value: 20.04000
-- R12_RCPA:
-    year: 2020
-    value: 12.08000
-- R12_EEU:
-    year: 2020
-    value: 56.55000
-- R12_FSU:
-    year: 2020
-    value: 56.50000
-- R12_LAM:
-    year: 2020
-    value: 64.94000
-- R12_MEA:
-    year: 2020
-    value: 54.26000
-- R12_NAM:
-    year: 2020
-    value: 97.76000
-- R12_PAO:
-    year: 2020
-    value: 91.30000
-- R12_PAS:
-    year: 2020
-    value: 65.20000
-- R12_SAS:
-    year: 2020
-    value: 164.28000
-- R12_WEU:
-    year: 2020
-    value: 131.95000
 - R12_CHN:
+    value: 1010.2975341620793
     year: 2020
-    value: 980.10000
+- R12_EEU:
+    value: 35.47528478655447
+    year: 2020
+- R12_FSU:
+    value: 57.570564544991505
+    year: 2020
+- R12_LAM:
+    value: 60.29012833867176
+    year: 2020
+- R12_MEA:
+    value: 68.33029429683499
+    year: 2020
+- R12_NAM:
+    value: 93.736225006495
+    year: 2020
+- R12_PAO:
+    value: 58.48
+    year: 2020
+- R12_PAS:
+    value: 123.84871054
+    year: 2020
+- R12_RCPA:
+    value: 23.914331400000002
+    year: 2020
+- R12_SAS:
+    value: 103.72625208000001
+    year: 2020
+- R12_WEU:
+    value: 139.432614046901
+    year: 2020
