--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,6 +13,11 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
+  jobs:
+    post_install:
+    # Remove requests-cache, which appears to cause segfaults on RTD workers
+    - pip uninstall --yes requests-cache
+
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
